Fixed the jumping issue of activate invite button in referral

--- a/src/styles/sass/page/_auction.scss
+++ b/src/styles/sass/page/_auction.scss
@@ -445,7 +445,7 @@
 }
 
 .wallet_content {
-    min-height: 220px;
+    min-height: 240px;
     .col-lg-6 {
         @include mq('tablet', max) {
             width: 50%;
